# autoronto-onboarding

./: .gitignore  .gitmodules  README.md  analyze_coco.py  load_images.py  main.py  requirements.txt
2d_viz/: .gitignore  README.md  main.py
2d_viz/configs/: configs.py
2d_viz/models/: yolo.py
2d_viz/reports/: valid_category_freq.tsv
2d_viz/scripts/: analyze_coco.py
3d-viz/: .gitignore  README.md  compile_commands.json
3d-viz/scripts/: build.sh  create_pkg.sh
3d-viz/ws/src/sum_solver_cpp/: CMakeLists.txt  package.xml
3d-viz/ws/src/sum_solver_cpp/scripts/: enable.sh  test_sum_solver.sh
3d-viz/ws/src/sum_solver_cpp/src/: two_sum_node.cpp
3d-viz/ws/src/sum_solver_py/: package.xml  setup.cfg  setup.py  test_sum_solver.sh
3d-viz/ws/src/sum_solver_py/scripts/: disable.sh  enable.sh  test_sum_solver.sh
3d-viz/ws/src/sum_solver_py/sum_solver_py/: cli.py  solver.py
3d-viz/ws/src/two_sum_solver/: CMakeLists.txt  package.xml
configs/: common.yaml
localization/: .gitignore  CMakeLists.txt  README.md  gen_test.py  lane_align_task.cpp  test.sh  vcpkg.json
models/: adapter.py  yolo.py
reports/: train_category_freq.tsv  train_image_sizes.tsv  valid_image_sizes.tsv
